# learning-app

./: .gitignore  README.txt  setShellCallApplScrpt.sh
python_app/: CMakeLists.txt  build_cpp.sh  installPackage.sh  installPackage_win.sh  main.py  starter.sh  starter_win.sh  tests.py  uninstallPackage.sh  useful.txt
python_app/UI/: widgets.py  widgets_collection.py  widgets_collection_old.py  widgets_data.py  widgets_facade.py  widgets_init.py  widgets_manager.py  widgets_messages.py  widgets_utils.py  widgets_vars.py  widgets_wrappers.py
python_app/UI/factories/: entriesWidgetsFactories.py  entryImageWidgetsFactories.py  excercisesFactories.py  factoriesFacade.py  subsectionWidgetsFactories.py
python_app/_utils/: _utils.py  _utils_main.py  logging.py  pathsAndNames.py
python_app/common_menus/: m_main.py  m_showCurrInfo.py
python_app/curr_state/: curr_state.py
python_app/daemon_service/: daemon_service.py  populateMainTeFile_request.py  url_request.py
python_app/data/: constants.py  temp.py
python_app/file_system/: _utils.py  book_fs.py  entry_fs.py  file_system_facade.py  file_system_main.py  file_system_manager.py  links.py  origmaterial_fs.py  paths.py  section_fs.py  toc_fs.py
python_app/generalManger/: generalManger.py
python_app/imageProcessing/: m_processImage.py  m_setImSavingDirectory.py
python_app/layouts/: README.txt  _layouts_utils.py  layouts_common.py  layouts_data.py  layouts_facade.py  layouts_main.py  layouts_manager.py  layouts_utils.py
python_app/outside_calls/: app_service.py  fsApp_calls.py  ide_calls.py  latex_calls.py  link_local.py  links_local.py  noteApp_calls.py  outside_calls_facade.py  pdfApp_calls.py  screenshot_app.py  skim_calls.py  tracker_calls.py  url.py
python_app/scripts/: osascripts.py
python_app/settings/: facade.py  manager.py  settings.py
python_app/tex_file/: create_tex_file.py  tex_file_create.py  tex_file_facade.py  tex_file_manager.py  tex_file_modify.py  tex_file_populate.py  tex_file_process.py  tex_file_utils.py
python_app/warning/: warning_manager.py
python_app/wordDict/: wordDict.py
(+190 files in other folders)
